# simple_redis

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  appveyor.yml  build.sh  dump.rdb
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
benches/: bench_commands.rs
docs/: index.html
docs/api/: aliases.js  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/api/implementors/core/clone/: trait.Clone.js
docs/api/implementors/core/default/: trait.Default.js
docs/api/implementors/core/error/: trait.Error.js
docs/api/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/api/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/api/implementors/simple_redis/types/: trait.RedisArg.js
docs/api/implementors/std/error/: trait.Error.js
docs/api/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/api/search.desc/simple_redis/: simple_redis-desc-0-.js
docs/api/simple_redis/: ErrorInfo.t.html  RedisBoolResult.t.html  RedisError.t.html  RedisStringResult.t.html  all.html  fn.create.html  index.html  sidebar-items.js  type.ErrorInfo.html  type.Interrupts.html  type.Message.html  type.RedisBoolResult.html  type.RedisEmptyResult.html  type.RedisError.html  type.RedisMessageResult.html  type.RedisResult.html  type.RedisStringResult.html
docs/api/simple_redis/client/: fn.create.html  index.html  sidebar-items.js  struct.Client.html
docs/api/simple_redis/commands/: index.html
docs/api/simple_redis/types/: RedisArg.t.html  RedisEmptyResult.t.html  RedisMessageResult.t.html  enum.ErrorInfo.html  enum.RedisError.html  index.html  sidebar-items.js  struct.Interrupts.html  struct.RedisError.html  trait.RedisArg.html  type.Message.html  type.RedisBoolResult.html  type.RedisEmptyResult.html  type.RedisMessageResult.html  type.RedisResult.html  type.RedisStringResult.html
docs/api/src/simple_redis/: client.rs.html  commands.rs.html  connection.rs.html  lib.rs.html  subscriber.rs.html  types.rs.html
docs/api/trait.impl/core/default/: trait.Default.js
docs/api/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/api/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/api/type.impl/core/result/: enum.Result.js
examples/: init_and_simple_operations.rs  open_close_connection.rs  pubsub.rs  set_get.rs  subscription_flow.rs
src/: client.rs  client_test.rs  commands.rs  commands_test.rs  connection.rs  connection_test.rs  lib.rs  lib_test.rs  subscriber.rs  subscriber_test.rs  types.rs  types_test.rs
tests/: client_test.rs  commands_test.rs  integration_test.rs  pubsub_test.rs  test_client.rs  test_commands.rs  test_pubsub.rs
(+8 files in other folders)
