[package]
name = "simple_redis"
version = "0.3.2"
authors = ["sagie gur ari <sagiegurari@gmail.com>"]
description = "Simple and resilient redis client."
license = "Apache-2.0"
documentation = "https://sagiegurari.github.io/simple_redis/api/simple_redis/index.html"
homepage = "http://github.com/sagiegurari/simple_redis"
repository = "https://github.com/sagiegurari/simple_redis.git"
readme = "README.md"
keywords = ["redis", "cache", "pubsub", "database"]
categories = ["caching", "database"]
include = [
    "**/*.rs",
    "docs/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
redis = "^0.8.0"

[features]
default = []

[badges]
travis-ci = { repository = "sagiegurari/simple_redis", branch = "master" }
