[package]
name = "simple_redis"
version = "0.5.2"
authors = ["Sagie Gur-Ari <sagiegurari@gmail.com>"]
description = "Simple and resilient redis client."
license = "Apache-2.0"
edition = "2018"
documentation = "https://sagiegurari.github.io/simple_redis/api/simple_redis/index.html"
homepage = "http://github.com/sagiegurari/simple_redis"
repository = "https://github.com/sagiegurari/simple_redis.git"
readme = "README.md"
keywords = ["redis", "cache", "pubsub", "database"]
categories = ["caching", "database"]
include = [
  "/benches/*",
  "/docs/*",
  "/examples/*",
  "/src/*",
  "/tests/*",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/Makefile.toml",
]

[dependencies]
redis = { version = "^0.18", default-features = false }

[dev-dependencies]
doc-comment = "^0.3"
rusty-hook = "^0.11"

[badges.codecov]
branch = "master"
repository = "sagiegurari/simple_redis"
service = "github"
